force-app/main/default/objects/WhatsApp_Configuration__c/WhatsApp_Configuration__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Configuration</label>
    <nameField>
        <displayFormat>WA-CONFIG-{0000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>