force-app/main/default/objects/WhatsApp_Configuration__c/fields/Agentforce_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Agent_Id__c</fullName>
    <description>Agentforce Agent ID for message routing</description>
    <label>Agentforce Agent Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>