force-app/main/default/objects/WhatsApp_Configuration__c/fields/API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Base_URL__c</fullName>
    <defaultValue>&quot;https://graph.facebook.com/v18.0&quot;</defaultValue>
    <description>Base URL for WhatsApp Business API</description>
    <label>API Base URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>