force-app/main/default/objects/WhatsApp_Configuration__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>WhatsApp Business API Key for authentication (Use Named Credentials for enhanced security)</description>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>