force-app/main/default/objects/WhatsApp_Configuration__c/fields/Audio_Transcription_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Audio_Transcription_Flow_API_Name__c</fullName>
    <description>API Name of the autolaunched Flow used to transcribe inbound audio files</description>
    <label>Audio Transcription Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>