force-app/main/default/objects/WhatsApp_Configuration__c/fields/Auto_Download_Media__c.field-meta.xml
<CustomField>
    <fullName>Auto_Download_Media__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Automatically download media from incoming messages</description>
    <label>Auto Download Media</label>
    <type>Checkbox</type>
</CustomField>