force-app/main/default/objects/WhatsApp_Configuration__c/fields/Business_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_ID__c</fullName>
    <description>WhatsApp Business Account ID</description>
    <label>Business Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>