force-app/main/default/objects/WhatsApp_Configuration__c/fields/Display_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Display_Phone_Number__c</fullName>
    <description>Human-readable WhatsApp business phone number</description>
    <label>Display Phone Number</label>
    <type>Phone</type>
</CustomField>