force-app/main/default/objects/WhatsApp_Configuration__c/fields/File_Processing_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Processing_Flow_API_Name__c</fullName>
    <description>API Name of the autolaunched Flow used to process inbound document/file attachments (PDF, Word, Excel, etc.)</description>
    <label>File Processing Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>