force-app/main/default/objects/WhatsApp_Configuration__c/fields/HMAC_Validation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>HMAC_Validation_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable HMAC signature validation for webhooks</description>
    <label>HMAC Validation Enabled</label>
    <type>Checkbox</type>
</CustomField>