force-app/main/default/objects/WhatsApp_Configuration__c/fields/Image_Analysis_Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Analysis_Flow_API_Name__c</fullName>
    <description>API Name of the autolaunched Flow used to analyze inbound image files</description>
    <label>Image Analysis Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>