force-app/main/default/objects/WhatsApp_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this configuration is currently active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>