force-app/main/default/objects/WhatsApp_Configuration__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>WhatsApp Business Phone Number (format: +1234567890)</description>
    <label>Phone Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>