force-app/main/default/objects/WhatsApp_Configuration__c/fields/Phone_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_ID__c</fullName>
    <description>Meta Phone Number ID used for API calls</description>
    <label>Phone Number ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>