force-app/main/default/objects/WhatsApp_Configuration__c/fields/Session_Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Timeout_Minutes__c</fullName>
    <defaultValue>1440</defaultValue>
    <description>WhatsApp session timeout in minutes (default 24hrs)</description>
    <label>Session Timeout Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>