force-app/main/default/objects/WhatsApp_Configuration__c/fields/SF_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Client_Id__c</fullName>
    <description>Connected App Consumer Key for server-to-server OAuth (Client Credentials flow). Required for Agentforce API calls from async Apex contexts where UserInfo.getSessionId() is unavailable.</description>
    <label>SF Connected App Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>