force-app/main/default/objects/WhatsApp_Configuration__c/fields/SF_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>SF_Client_Secret__c</fullName>
    <description>Connected App Consumer Secret for server-to-server OAuth (Client Credentials flow). Required for Agentforce API calls from async Apex contexts.</description>
    <label>SF Connected App Client Secret</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>