force-app/main/default/objects/WhatsApp_Configuration__c/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <description>Public URL for receiving WhatsApp webhooks</description>
    <label>Webhook URL</label>
    <type>Url</type>
</CustomField>