force-app/main/default/objects/WhatsApp_Configuration__c/fields/Webhook_Verify_Token__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Verify_Token__c</fullName>
    <description>Token for webhook verification (WhatsApp setup)</description>
    <label>Webhook Verify Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>