force-app/main/default/objects/WhatsApp_Configuration__c/fields/WhatsApp_API_Version__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_API_Version__c</fullName>
    <defaultValue>&apos;v21.0&apos;</defaultValue>
    <description>WhatsApp API version</description>
    <label>WhatsApp API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>